add code for CLI handling, re-factor unit tests, add loading of trip cost csv